samples/_failures_safe/1761266558_3acb50_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_43f347bf.c: In function ‘main’:
./samples/SAFE/__tmp_43f347bf.c:141:5: error: expected expression at end of input
  141 |     while (sm.current_state != STATE_DONE && sm.current_state !=
      |     ^~~~~
./samples/SAFE/__tmp_43f347bf.c:141:5: error: expected declaration or statement at end of input
